--- a/beauty-project/vehicle/src/main/webapp/WEB-INF/web.xml
+++ b/beauty-project/vehicle/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
 		<param-value>
             classpath*:/spring-context.xml
             classpath*:/spring-context-sqlserver.xml
+            classpath*:/application-mq.xml
         </param-value>
 	</context-param>
 
