--- a/beauty-project/traffic/src/main/webapp/WEB-INF/web.xml
+++ b/beauty-project/traffic/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath*:/spring-context.xml
-			classpath*:/spring-context-mysql.xml
+			classpath*:/spring-context-oracle.xml
 			classpath*:/spring-context-redis.xml
 			classpath*:/spring-context-mongodb.xml
 		</param-value>
