--- a/pom.xml
+++ b/pom.xml
@@ -348,11 +348,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<version>10.2.0.4.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.oracle</groupId>-->
+			<!--<artifactId>ojdbc8</artifactId>-->
+			<!--<version>10.2.0.4.0</version>-->
+		<!--</dependency>-->
 		<!-- PERSISTENCE end -->
 
 		<!-- WEB begin -->
