--- a/beauty-common/src/main/resources/oracle.properties
+++ b/beauty-common/src/main/resources/oracle.properties
@@ -2,16 +2,16 @@
 #===== Database sttings =====#
 #============================#
 
-jdbc.type=mysql
+jdbc.type=oracle
 jdbc.driver=oracle.jdbc.OracleDriver
 
-jdbcMaster.url=jdbc:oracle:thin:@localhost:1521:ORCL
-jdbcMaster.username=sys as sysdba
-jdbcMaster.password=123456
+jdbcMaster.url=jdbc:oracle:thin:@10.2.62.2:1521:orcl
+jdbcMaster.username=cdbus
+jdbcMaster.password=cdbus
 
-jdbcSlave.url=jdbc:oracle:thin:@localhost:1521:ORCL
-jdbcSlave.username=sys as sysdba
-jdbcSlave.password=123456
+jdbcSlave.url=jdbc:oracle:thin:@10.2.62.2:1521:orcl
+jdbcSlave.username=cdbus
+jdbcSlave.password=cdbus
 
 #pool settings
 jdbc.pool.init=10
