--- a/beauty-common/src/main/resources/oracle.properties
+++ b/beauty-common/src/main/resources/oracle.properties
@@ -6,12 +6,16 @@ jdbc.type=oracle
 jdbc.driver=oracle.jdbc.OracleDriver
 
 jdbcMaster.url=jdbc:oracle:thin:@10.2.62.2:1521:orcl
-jdbcMaster.username=cdbus
-jdbcMaster.password=cdbus
+#jdbcMaster.username=cdbus
+#jdbcMaster.password=cdbus
+jdbcMaster.username=stjk
+jdbcMaster.password=stjk
 
 jdbcSlave.url=jdbc:oracle:thin:@10.2.62.2:1521:orcl
-jdbcSlave.username=cdbus
-jdbcSlave.password=cdbus
+#jdbcSlave.username=cdbus
+#jdbcSlave.password=cdbus
+jdbcSlave.username=stjk
+jdbcSlave.password=stjk
 
 #pool settings
 jdbc.pool.init=10
