--- a/beauty-common/src/main/resources/mongodb.properties
+++ b/beauty-common/src/main/resources/mongodb.properties
@@ -1,5 +1,6 @@
 #mongo.hostport=18.219.36.68:27017,18.219.36.68:27017
-mongo.hostport=101.201.209.61:27017,101.201.209.61:27017
+#mongo.hostport=101.201.209.61:27017,101.201.209.61:27017
+mongo.hostport=127.0.0.1:27017
 mongo.connectionsPerHost=8
 mongo.threadsAllowedToBlockForConnectionMultiplier=4
 
@@ -16,4 +17,4 @@ mongo.socketTimeout=8000
 mongo.slaveOk=true
 #mongo.username=adminLaoyou
 #mongo.password=adminLaoyou
-mongo.dbName=education
+mongo.dbName=traffic
